# libgp8302-openwrt

./: Makefile  README.md
src/: CMakeLists.txt  libgp8302.c  libgp8302.h
